// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snap test OfferCard OfferCard should render correctly 1`] = `
<div>
  <article
    class="place-card cities__place-card"
  >
    <div
      class="place-card__mark"
    >
      <span>
        Premium
      </span>
    </div>
    <div
      class="place-card__image-wrapper cities__image-wrapper"
    >
      <a
        href="/offer/1"
      >
        <img
          alt="Place image"
          class="place-card__image"
          height="200"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/6.jpg"
          width="260"
        />
      </a>
    </div>
    <div
      class="place-card__info "
    >
      <div
        class="place-card__price-wrapper"
      >
        <div
          class="place-card__price"
        >
          <b
            class="place-card__price-value"
          >
            €
            340
          </b>
          <span
            class="place-card__price-text"
          >
             / night
          </span>
        </div>
        <button
          class="place-card__bookmark-button button false"
          type="button"
        >
          <svg
            class="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlink:href="#icon-bookmark"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            To bookmarks
          </span>
        </button>
      </div>
      <div
        class="place-card__rating rating"
      >
        <div
          class="place-card__stars rating__stars"
        >
          <span
            style="width: 80%;"
          />
          <span
            class="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        class="place-card__name"
      >
        <a
          href="/offer/1"
        >
          Canal View Prinsengracht
        </a>
      </h2>
      <p
        class="place-card__type"
      >
        Apartment
      </p>
    </div>
  </article>
</div>
`;

exports[`Snap test OfferCard OfferCard should render correctly 2`] = `
<div>
  <article
    class="place-card cities__place-card"
  >
    <div
      class="place-card__image-wrapper cities__image-wrapper"
    >
      <a
        href="/offer/2"
      >
        <img
          alt="Place image"
          class="place-card__image"
          height="200"
          src="https://assets.htmlacademy.ru/intensives/javascript-3/hotel/19.jpg"
          width="260"
        />
      </a>
    </div>
    <div
      class="place-card__info "
    >
      <div
        class="place-card__price-wrapper"
      >
        <div
          class="place-card__price"
        >
          <b
            class="place-card__price-value"
          >
            €
            196
          </b>
          <span
            class="place-card__price-text"
          >
             / night
          </span>
        </div>
        <button
          class="place-card__bookmark-button button place-card__bookmark-button--active"
          type="button"
        >
          <svg
            class="place-card__bookmark-icon"
            height="19"
            width="18"
          >
            <use
              xlink:href="#icon-bookmark"
            />
          </svg>
          <span
            class="visually-hidden"
          >
            In bookmarks
          </span>
        </button>
      </div>
      <div
        class="place-card__rating rating"
      >
        <div
          class="place-card__stars rating__stars"
        >
          <span
            style="width: 40%;"
          />
          <span
            class="visually-hidden"
          >
            Rating
          </span>
        </div>
      </div>
      <h2
        class="place-card__name"
      >
        <a
          href="/offer/2"
        >
          Nice, cozy, warm big bed apartment
        </a>
      </h2>
      <p
        class="place-card__type"
      >
        Room
      </p>
    </div>
  </article>
</div>
`;
